fix contrast on pricing grid

--- a/assets/sass/modules/content-blocks/_pricing.scss
+++ b/assets/sass/modules/content-blocks/_pricing.scss
@@ -69,7 +69,7 @@
 
           .package-name {
             text-transform: uppercase;
-            color: grey;
+            color: #333;
             font-size: 10px;
             letter-spacing: 4px;
             font-weight: 500;
